# turkgram

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  morphology-noun-spec.md  morphology-spec.md  pyproject.toml  sweep_out.txt
docs/: architecture-critique-genisletme.md  faz1-bosluk-analizi.md  faz1-implementation-plan.md  faz2a-cozumleyici-tasarim.md  faz2a-implementation-plan.md  faz2a-mimari-kritik.md  tr-api-tasarim.md
spec/: adjective-spec.md  analysis-spec.md  aspect-spec.md  casina-spec.md  compound-tense-spec.md  conjunction-spec.md  copula-spec.md  disambiguation-spec.md  interjection-onomatopoeia-spec.md  ken-spec.md  nonfinite-spec.md  number-spec.md  participle-spec.md  postposition-spec.md  pronoun-spec.md  sentence-disambiguation-spec.md  statistical-disambiguation-spec.md  voice-spec.md
tests/: conftest.py  golden_adjective.py  golden_adjective_analysis.py  golden_analysis.py  golden_aspect.py  golden_casina.py  golden_casina_analysis.py  golden_clause.py  golden_clause_v4.py  golden_clause_v5.py  golden_clause_v5b.py  golden_compound.py  golden_compound_analysis.py  golden_conjunction.py  golden_conllu.py  golden_copula.py  golden_dependency.py  golden_derivation_analysis.py  golden_derivation_chain.py  golden_interjection.py  golden_ken.py  golden_ken_analysis.py  golden_ki_analysis.py  golden_koordine_genitif.py  golden_koordine_genitif_dep.py  golden_lemmatize.py  golden_nonfinite.py  golden_normalization.py  golden_nouns.py  golden_number.py  golden_number_analysis.py  golden_parse.py  golden_participle.py  (+95 more)
(+103 files in other folders)
