[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turkgram"
version = "0.1.0"
description = "Türkiye Türkçesi grameri, kod olarak — çekim/türetme üretim motoru (saf Python, bağımlılıksız)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kadirhan Polat" }]
keywords = ["turkish", "türkçe", "morphology", "grammar", "morfoloji", "gramer", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: Turkish",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/kadirhanpolat/turkgram"

[tool.setuptools]
packages = ["turkgram"]

[tool.setuptools.package-data]
turkgram = ["data/*.tsv"]

[tool.pytest.ini_options]
# `.` → `tests` paketini bulmak için (from tests.golden_verbs import ...)
pythonpath = ["."]
testpaths = ["tests"]
# slow = kombinatoryal round-trip süpürme; varsayılan koşuda ATLA (elle -m slow ile koş).
addopts = "-m 'not slow'"
markers = [
    "slow: kombinatoryal süpürme (round-trip recall + p95 çağrı bütçesi)",
]
